# CrewAI_LAB01

./: LAB01.md  README.md  notebook_gnn_rca_observabilidade.ipynb  pyproject.toml
src/lab01/: crew.py  main.py
src/lab01/config/: agents.yaml  tasks.yaml
