[project]
name = "lab01"
version = "0.1.0"
description = "LAB01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3"
]

[project.scripts]
lab01 = "lab01.main:run"
run_crew = "lab01.main:run"
train = "lab01.main:train"
replay = "lab01.main:replay"
test = "lab01.main:test"
run_with_trigger = "lab01.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
